added 2015 awards and more specific skills

--- a/resume.tex
+++ b/resume.tex
@@ -87,7 +87,10 @@ Engineer}\\[15pt]\par}
 %	OBJECTIVE
 %----------------------------------------------------------------------------------------
 \section{About Me}
-Experienced system administrator with an extensive object-oriented development background. Passionate worker and proven leader with excellent time/project/priority management skills; driven to succeed at any task. Extensive background working in group projects and independently, along with great communication skills both oral and documented. Capable learner can rapidly close any  knowledge gap.
+Experienced system administrator with an extensive object-oriented development background. Passionate worker and proven leader with excellent 
+time/project/priority management skills; driven to succeed at any task. Extensive background working in group projects and independently, along with 
+great communication skills both oral and documented. Capable learner can rapidly close any  knowledge gap. Multiplatform experience from 
+Windows/Mac/Linux to less common Unix based operating systems.
 
 %----------------------------------------------------------------------------------------
 %       WORK EXPERIENCE
@@ -180,7 +183,7 @@ Languages/Frameworks
 & \textsc{Batch}, \textsc{Bash}, \textsc{MySQL}, \textsc{HTML}\\
 Operating Systems
 & \textsc{Windows}, \textsc{OpenBSD}, \textsc{FreeBSD}, \\
-& \textsc{Linux}, \textsc{OS X}\\
+& \textsc{Linux(RHEL, CentOs, Ubuntu, Fedora)} \textsc{OS X}\\
 Network
 & \textsc{DNS}, \textsc{DHCP}, \textsc{Routing}, \textsc{VPN}\\
 Network Administration
@@ -231,6 +234,8 @@ Network Administration
 \section{Awards} 
 
 \begin{tabular}{rl}
+2015     & \textbf{Excellence in Service}\\
+& \textit{Texas State University}\\ \\
 2014	 & \textbf{Excellence in Teaching}\\
 	 & \textbf{Undergraduate Academic Distinction}\\
 & \textit{Texas State University}\\ \\
