change of work experience

--- a/resume.tex
+++ b/resume.tex
@@ -102,12 +102,12 @@ Windows/Mac/Linux to less common Unix based operating systems.
 % WORK EXPERIENCE 1
 %------------------------------------------------
 
-{\raggedleft\textsc{August 2014 - December 2014}\par}
+{\raggedleft\textsc{Current, from June 2012}\par}
 
-{\raggedright\large Undergraduate Research Assistant\\
+{\raggedright\large Undergraduate Instructional Assistant\\
 \textit{Department of Computer Science, Texas State University}\\[5pt]}
 
-\normalsize{Researched distributed programming on mobile phones using OSGi and rOSGi and the security issues that arise.}\\
+\normalsize{Lab Instructor and tutor tasked with tutoring students in a wide range of subjects and instructing course specific labs. Designed an accelerated curriculum for the advanced introductory course. Lead a team tasked with designing new software and utilities for use by faculty, staff, and students. Managed multiple departmental servers. Created automated solutions for departmental problems. Examples would be a multi-OS netboot system, a homework upload solution, automated domain join tool, etc.}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 2
@@ -118,29 +118,20 @@ Windows/Mac/Linux to less common Unix based operating systems.
 {\raggedright\large Owner, Developer\\
 \textit{Egger Consulting}\\[5pt]}
 
-\normalsize{Freelance developer and system administrator tasked with designing multiple applications and systems from web based registration forms to advanced network layouts and tools.}\\
+\normalsize{Freelance developer and system administrator tasked with designing multiple applications and systems from web based registration forms to advanced network layouts and tools. Install security systems such as cameras and built websites}\\
+
+
 
 %------------------------------------------------
 % WORK EXPERIENCE 3
 %------------------------------------------------
 
-{\raggedleft\textsc{June 2013 - August 2014}\par}
+{\raggedleft\textsc{August 2014 - December 2014}\par}
 
-{\raggedright\large Head of Infrastructure\\
+{\raggedright\large Undergraduate Research Assistant\\
 \textit{Department of Computer Science, Texas State University}\\[5pt]}
 
-\normalsize{Lead a team tasked with designing new software and utilities for use by faculty, staff, and students. Managed multiple departmental servers. Created automated solutions for departmental problems.}\\
-
-%------------------------------------------------
-% WORK EXPERIENCE 4
-%------------------------------------------------
-
-{\raggedleft\textsc{Current, from June 2012}\par}
-
-{\raggedright\large Undergraduate Instructional Assistant\\
-\textit{Department of Computer Science, Texas State University}\\[5pt]}
-
-\normalsize{Lab Instructor and tutor tasked with tutoring students in a wide range of subjects and instructing course specific labs. Designed an accelerated curriculum for the advanced introductory course.}\\
+\normalsize{Researched secure distributed programming on mobile phones using OSGi/rOSGi. Tools used: Eclipse, Wireshark, Linux.}\\
 
 %----------------------------------------------------------------------------------------
 % PROJECTS
