updating resume to include Forcepoint

--- a/resume.tex
+++ b/resume.tex
@@ -63,7 +63,7 @@
 \titleformat{\section}{\color{headings}
 \scshape\Large\raggedright}{}{0em}{}[\color{black}\titlerule]
 
-\titlespacing{\section}{0pt}{0pt}{5pt} % Spacing around titles
+\titlespacing{\section}{0pt}{0pt}{3pt} % Spacing around titles
 
 \begin{document}
 
@@ -74,9 +74,7 @@
 %----------------------------------------------------------------------------------------
 
 \par{\centering{\sffamily\Huge Mason Egger}\\ % Your name
-{\color{headings}\fontspec[Variant = 2]{Times New Roman} Software Developer, System 
-Administrator, System 
-Engineer}\\[15pt]\par} 
+{\color{headings}\fontspec[Variant = 2]{Times New Roman} Systems and Software Engineer}\\[15pt]\par} 
 	
 %----------------------------------------------------------------------------------------
 
@@ -87,10 +85,7 @@ Engineer}\\[15pt]\par}
 %	OBJECTIVE
 %----------------------------------------------------------------------------------------
 \section{About Me}
-Experienced system administrator with an extensive object-oriented development background. Passionate worker and proven leader with excellent 
-time/project/priority management skills; driven to succeed at any task. Extensive background working in group projects and independently, along with 
-great communication skills both oral and documented. Capable learner can rapidly close any  knowledge gap. Multiplatform experience from 
-Windows/Mac/Linux to less common Unix based operating systems.
+Experienced engineer having worked as both software/systems engineer and system administrator. Prefers systems and security to front end and UI. Passionate worker and proven leader with excellent time/project/priority management skills; driven to succeed at any task. Capable learner who can not only rapidly close any knowledge gap, but enjoys teaching others and writing more practical documents/guides. Enthusiast about all things open source, especially Python and BSDs. 
 
 %----------------------------------------------------------------------------------------
 %       WORK EXPERIENCE
@@ -102,36 +97,36 @@ Windows/Mac/Linux to less common Unix based operating systems.
 % WORK EXPERIENCE 1
 %------------------------------------------------
 
-{\raggedleft\textsc{Current, from June 2012}\par}
+{\raggedleft\textsc{May 2016 - current}\par}
 
-{\raggedright\large Undergraduate Instructional Assistant\\
-\textit{Department of Computer Science, Texas State University}\\[5pt]}
+{\raggedright\large Software Engineer\\
+\textit{Forcepoint, powered by Raytheon}\\[5pt]}
 
-\normalsize{Lab Instructor and tutor tasked with tutoring students in a wide range of subjects and instructing course specific labs. Designed an accelerated curriculum for the advanced introductory course. Lead a team tasked with designing new software and utilities for use by faculty, staff, and students. Managed multiple departmental servers. Created automated solutions for departmental problems. Examples would be a multi-OS netboot system, a homework upload solution, automated domain join tool, etc.}\\
+\normalsize{Implemented a custom plugin based initialization framework to allow for quick development of new software integrations. Architected a secure cloud platform for the Cloud 2.0 initiative using AWS, Docker, SaltStack, Kubernetes. Developed automation for common  security benchmarks/compliances such as CIS, DISA STIG, PCI DSS. Lead the task of creating automated generation of API documentation.}\\
+
 
 %------------------------------------------------
 % WORK EXPERIENCE 2
 %------------------------------------------------
 
-{\raggedleft\textsc{Current, from January 2014}\par}
+{\raggedleft\textsc{December 2015 - May 2016}\par}
 
-{\raggedright\large Owner, Developer\\
-\textit{Egger Consulting}\\[5pt]}
+{\raggedright\large Associate Software Engineer\\
+\textit{Forcepoint, powered by Raytheon}\\[5pt]}
 
-\normalsize{Freelance developer and system administrator tasked with designing multiple applications and systems from web based registration forms to advanced network layouts and tools. Install security systems such as cameras and built websites}\\
-
+\normalsize{Assisted in architecting and implementing an on-premise CentOS based secure operating system in an effort to replace the existing product. Lead development on the integration point between the new architecture and the web filtering/proxy team. Implemented CI/CD pipelines in Jenkins and Docker for the building of custom RPMs, static analysis, unit testing, and documentation generation using Sphinx. Promoted to Software Engineer within the same team.}\\
 
 
 %------------------------------------------------
 % WORK EXPERIENCE 3
 %------------------------------------------------
 
-{\raggedleft\textsc{August 2014 - December 2014}\par}
+{\raggedleft\textsc{June 2012 - December 2015}\par}
 
-{\raggedright\large Undergraduate Research Assistant\\
+{\raggedright\large Undergraduate Instructional Assistant\\
 \textit{Department of Computer Science, Texas State University}\\[5pt]}
 
-\normalsize{Researched secure distributed programming on mobile phones using OSGi/rOSGi. Tools used: Eclipse, Wireshark, Linux.}\\
+\normalsize{Lab Instructor and tutor tasked with tutoring students in a wide range of subjects and instructing course specific labs. Designed an accelerated curriculum for the advanced introductory course. Lead a team tasked with designing new software and utilities for use by faculty, staff, and students. Managed multiple departmental servers. Created automated solutions for departmental problems. Examples would be a multi-OS netboot system, a homework upload solution, automated domain join tool, etc.}\\
 
 %----------------------------------------------------------------------------------------
 % PROJECTS
@@ -153,10 +148,10 @@ Windows/Mac/Linux to less common Unix based operating systems.
 
 \colorbox{shade}{\textcolor{text1}{
 \begin{tabular}{c|p{7cm}}
-%\raisebox{-4pt}{\textifsymbol{18}} & 900 Peques St. Apt. 2302 San Marcos, TX \\ % Address
+\raisebox{-4pt}{\textifsymbol{18}} & 4600 Seton Center Parkway \#801 Austin, TX \\ % Address
 \raisebox{-3pt}{\Mobilefone} & (512)387-0297 \\ % Phone number
 \raisebox{-1pt}{\Letter} & \href{mailto:mason@masonegger.com}{mason@masonegger.com} \\ % Email address
-\Keyboard & \href{http://www.masonegger.com}{http://www.masonegger.com} \\ % Website
+\Keyboard & \href{https://www.masonegger.com}{https://www.masonegger.com} \\ % Website
 \end{tabular}
 }
 }\\[10pt]
@@ -169,19 +164,16 @@ Windows/Mac/Linux to less common Unix based operating systems.
 
 \begin{tabular}{rl}
 Languages/Frameworks
-& \textsc{Java}, \textsc{C++}, \textsc{C}, \textsc{Perl}, \textsc{Python},\\ 
-& \textsc{Powershell}, \textsc{VBScript}, \textsc{Django} \\
-& \textsc{Batch}, \textsc{Bash}, \textsc{MySQL}, \textsc{HTML}\\
+& \textsc{Python}, \textsc{Java}, \textsc{C++}, \textsc{C}, \textsc{Perl},\\
 Operating Systems
 & \textsc{Windows}, \textsc{OpenBSD}, \textsc{FreeBSD}, \\
-& \textsc{Linux(RHEL, CentOs, Ubuntu, Fedora)} \textsc{OS X}\\
+& \textsc{Linux(RHEL, CentOs, Kali, Fedora)} \textsc{OS X}\\
 Network
-& \textsc{DNS}, \textsc{DHCP}, \textsc{Routing}, \textsc{VPN}\\
-Network Administration
-& \textsc{Database Design}, \textsc{MVC Design}, \\
-& \textsc{LDAP}, \textsc{Active Directory},\\
-& \textsc{Group Policy}, \textsc{Virtualization}, \\
-& \textsc{Apache}, \textsc{Nginx} \\ 
+& \textsc{DNS}, \textsc{DHCP}, \textsc{Routing}, \textsc{VPN}, \textsc{VLANs},\\
+Dev Ops
+& \textsc{Jenkins}, \textsc{Docker}, \textsc{Kubernetes},\\
+Cloud
+& \textsc{AWS}, \textsc{Digital Ocean},
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
@@ -190,31 +182,24 @@ Network Administration
 
 \section{Education} 
 
-\begin{tabular}{rl} % Start a table with two columns, one for dates and one for qualifications
+\begin{tabular}{ll} % Start a table with two columns, one for dates and one for qualifications
 
 %------------------------------------------------
 % EDUCATION 1
 %------------------------------------------------
 
-2011 -- \textsc{Present} & \textbf{Bachelor of Science} \\ 
+2015 \textbf{Bachelor of Science} \\ 
 & \textsc{Computer Science} \\ 
 & \textit{Texas State University}\\
-&\\
+
 	 
 %------------------------------------------------
 % EDUCATION 2
 %------------------------------------------------
 
-2011 -- \textsc{Present} & \textbf{Bachelor of Arts} \\ 
+2015 \textbf{Bachelor of Arts} \\ 
 & \textsc{Music}, \textit{Trombone}\\ 
 & \textit{Texas State University}\\ \\
-
-%------------------------------------------------
-% GPA
-%------------------------------------------------
-& \large GPA: \textit{3.32} \\
-& Anticipated Graduation: \textit{December 2015}\\
-%----------------------------------------------------------------------------------------
 
 \end{tabular}
 
@@ -225,6 +210,8 @@ Network Administration
 \section{Awards} 
 
 \begin{tabular}{rl}
+2016     & \textbf{Silver Performance Award}\\
+& \textit{Forcepoint}\\ \\
 2015     & \textbf{Excellence in Service}\\
 & \textit{Texas State University}\\ \\
 2014	 & \textbf{Excellence in Teaching}\\
@@ -241,16 +228,19 @@ Network Administration
 \end{tabular}\\[10pt]
 
 
+
+
+
 %----------------------------------------------------------------------------------------
-%	Extra Curricular
+%	Miscellaneous
 %----------------------------------------------------------------------------------------
 
-\section{Extra Curricular/Leadership} 
+\section{Miscellaneous} 
 
 \begin{tabular}{rl}
+& YouTube Host \textit{BSD Synergy}\\
 & Recordings: \textit{Trombones at Texas State}, \textit{Carol of the Bones} \\
-& \textit{Alumni Relations Officer}, Phi Mu Alpha \\
-& \textit{Vice President}, ITA Trombone Society\\
+& Phi Mu Alpha - Gamma Phi Chapter \textit{Alumni Relations Officer},  \\
 & Team Lead, \textit{Collegiate Cyber Def. Competition}\\
 & Alumni, \textit{Bobcat Marching Band}\\
 \end{tabular}\\[10pt]
