updating for Forcepoint

--- a/resume.tex
+++ b/resume.tex
@@ -97,28 +97,19 @@ Experienced engineer having worked as both software/systems engineer and system 
 % WORK EXPERIENCE 1
 %------------------------------------------------
 
-{\raggedleft\textsc{May 2016 - current}\par}
+{\raggedleft\textsc{December 2015 - current}\par}
 
-{\raggedright\large Software Engineer\\
+{
+\raggedright\large Software Engineer II\\
+\raggedright\small Software Engineer I\\
+\raggedright\small Associate Software Engineer\\
 \textit{Forcepoint, powered by Raytheon}\\[5pt]}
 
-\normalsize{Implemented a custom plugin based initialization framework to allow for quick development of new software integrations. Architected a secure cloud platform for the Cloud 2.0 initiative using AWS, Docker, SaltStack, Kubernetes. Developed automation for common  security benchmarks/compliances such as CIS, DISA STIG, PCI DSS. Lead the task of creating automated generation of API documentation.}\\
+\normalsize{Designed and implemented a Cloud based CI/CD pipeline for the Cloud 2.0 initiative using Artifactory, Jenkins, Docker, Kubernetes and other DevOps cloud tools in AWS and Azure. Part of the team that re-architected an on-premise CentOS based secure operating system in an effort to replace the legacy product. Implemented a custom plugin based initialization framework to allow for quick development of new software integrations. Lead development on the integration point between the new architecture and the web filtering/proxy team. Implemented CI/CD pipelines in Jenkins and Docker for the building of custom RPMs, static analysis, unit testing, and documentation generation using Sphinx. Promoted multiple times within same team.}\\
 
 
 %------------------------------------------------
 % WORK EXPERIENCE 2
-%------------------------------------------------
-
-{\raggedleft\textsc{December 2015 - May 2016}\par}
-
-{\raggedright\large Associate Software Engineer\\
-\textit{Forcepoint, powered by Raytheon}\\[5pt]}
-
-\normalsize{Assisted in architecting and implementing an on-premise CentOS based secure operating system in an effort to replace the existing product. Lead development on the integration point between the new architecture and the web filtering/proxy team. Implemented CI/CD pipelines in Jenkins and Docker for the building of custom RPMs, static analysis, unit testing, and documentation generation using Sphinx. Promoted to Software Engineer within the same team.}\\
-
-
-%------------------------------------------------
-% WORK EXPERIENCE 3
 %------------------------------------------------
 
 {\raggedleft\textsc{June 2012 - December 2015}\par}
@@ -131,11 +122,15 @@ Experienced engineer having worked as both software/systems engineer and system 
 %----------------------------------------------------------------------------------------
 % PROJECTS
 %----------------------------------------------------------------------------------------
-\section{Projects}
+\section{Speaker/Guest Lecturer}
 
-{\raggedright\large Hybrid Cloud Network, Netboot, Solera NFC Solutions\\}
+\begin{tabular}{rl}
+& Texas Linux Festival 2016\\
+& \quad \textit{pfSense - A Beginner's Guide to a Sensible Firewall} \\
+& Texas State University (every semester 2016 - present)\\
+& \quad \textit{Reality of Being a Software Engineer}\\
+\end{tabular}\\[10pt]
 
-\normalsize{For a complete list of projects, visit \href{http://www.masonegger.com}{www.masonegger.com}}\\
 
 \end{minipage} % End the left-hand side of the page
 \hfill
@@ -163,17 +158,17 @@ Experienced engineer having worked as both software/systems engineer and system 
 \section{Skills} 
 
 \begin{tabular}{rl}
-Languages/Frameworks
+Languages
 & \textsc{Python}, \textsc{Java}, \textsc{C++}, \textsc{C}, \textsc{Perl},\\
 Operating Systems
 & \textsc{Windows}, \textsc{OpenBSD}, \textsc{FreeBSD}, \\
-& \textsc{Linux(RHEL, CentOs, Kali, Fedora)} \textsc{OS X}\\
-Network
-& \textsc{DNS}, \textsc{DHCP}, \textsc{Routing}, \textsc{VPN}, \textsc{VLANs},\\
+& \textsc{Linux(RHEL, CentOS, Kali, Fedora)} \textsc{OS X}\\
+%Network
+%& \textsc{DNS}, \textsc{DHCP}, \textsc{Routing}, \textsc{VPN}, \textsc{VLANs},\\
 Dev Ops
-& \textsc{Jenkins}, \textsc{Docker}, \textsc{Kubernetes},\\
+& \textsc{Jenkins}, \textsc{Docker}, \textsc{Kubernetes}, \textsc{Artifactory}\\
 Cloud
-& \textsc{AWS}, \textsc{Digital Ocean},
+& \textsc{AWS}, \textsc{Azure}, \textsc{Digital Ocean},
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
@@ -240,8 +235,8 @@ Cloud
 \begin{tabular}{rl}
 & YouTube Host \textit{BSD Synergy}\\
 & Recordings: \textit{Trombones at Texas State}, \textit{Carol of the Bones} \\
-& Phi Mu Alpha - Gamma Phi Chapter \textit{Alumni Relations Officer},  \\
-& Team Lead, \textit{Collegiate Cyber Def. Competition}\\
+& Phi Mu Alpha - Gamma Phi Chapter \textit{Alumni Relations Officer}  \\
+& Team Lead, \textit{Collegiate Cyber Defense Competition}\\
 & Alumni, \textit{Bobcat Marching Band}\\
 \end{tabular}\\[10pt]
 
