updating resume to final Forcepoint info.

--- a/resume.tex
+++ b/resume.tex
@@ -105,7 +105,7 @@ Experienced engineer having worked as both software/systems engineer and system 
 \raggedright\small Associate Software Engineer\\
 \textit{Forcepoint, powered by Raytheon}\\[5pt]}
 
-\normalsize{Designed and implemented a Cloud based CI/CD pipeline for the Cloud 2.0 initiative using Artifactory, Jenkins, Docker, Kubernetes and other DevOps cloud tools in AWS and Azure. Part of the team that re-architected an on-premise CentOS based secure operating system in an effort to replace the legacy product. Implemented a custom plugin based initialization framework to allow for quick development of new software integrations. Lead development on the integration point between the new architecture and the web filtering/proxy team. Implemented CI/CD pipelines in Jenkins and Docker for the building of custom RPMs, static analysis, unit testing, and documentation generation using Sphinx. Promoted multiple times within same team.}\\
+\normalsize{Designed and implemented a Cloud based CI/CD pipeline for the Cloud 2.0 initiative using Artifactory, Jenkins, Docker, Kubernetes, Terraform and other DevOps cloud tools on AWS as Infrastructure as Code Part of the team that re-architected an on-premise CentOS based secure operating system in an effort to replace the legacy product. Implemented a custom plugin based initialization framework to allow for quick development of new software integrations. Lead development on the integration point between the new architecture and the web filtering/proxy team. Implemented CI/CD pipelines in Jenkins and Docker for the building of custom RPMs, static analysis, unit testing, and documentation generation using Sphinx. Promoted multiple times within same team.}\\
 
 
 %------------------------------------------------
@@ -161,14 +161,15 @@ Experienced engineer having worked as both software/systems engineer and system 
 Languages
 & \textsc{Python}, \textsc{Java}, \textsc{C++}, \textsc{C}, \textsc{Perl},\\
 Operating Systems
-& \textsc{Windows}, \textsc{OpenBSD}, \textsc{FreeBSD}, \\
-& \textsc{Linux(RHEL, CentOS, Kali, Fedora)} \textsc{OS X}\\
+& \textsc{Linux(RHEL, CentOS, Kali, Fedora)} \\
+& \textsc{OpenBSD}, \textsc{FreeBSD}, \\
+Dev Ops
+& \textsc{Jenkins}, \textsc{Docker}, \textsc{Kubernetes}, \textsc{Artifactory}, \\
+& \textsc{Terraform}\\
+Cloud
+& \textsc{AWS}, \textsc{Digital Ocean},
 %Network
 %& \textsc{DNS}, \textsc{DHCP}, \textsc{Routing}, \textsc{VPN}, \textsc{VLANs},\\
-Dev Ops
-& \textsc{Jenkins}, \textsc{Docker}, \textsc{Kubernetes}, \textsc{Artifactory}\\
-Cloud
-& \textsc{AWS}, \textsc{Azure}, \textsc{Digital Ocean},
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
