updating resume to include HomeAway and volunteer work

--- a/resume.tex
+++ b/resume.tex
@@ -74,7 +74,7 @@
 %----------------------------------------------------------------------------------------
 
 \par{\centering{\sffamily\Huge Mason Egger}\\ % Your name
-{\color{headings}\fontspec[Variant = 2]{Times New Roman} Systems and Software Engineer}\\[15pt]\par} 
+{\color{headings}\fontspec[Variant = 2]{Times New Roman} Systems and Software Engineer, Educator}\\[15pt]\par} 
 	
 %----------------------------------------------------------------------------------------
 
@@ -85,7 +85,7 @@
 %	OBJECTIVE
 %----------------------------------------------------------------------------------------
 \section{About Me}
-Experienced engineer having worked as both software/systems engineer and system administrator. Prefers systems and security to front end and UI. Passionate worker and proven leader with excellent time/project/priority management skills; driven to succeed at any task. Capable learner who can not only rapidly close any knowledge gap, but enjoys teaching others and writing more practical documents/guides. Enthusiast about all things open source, especially Python and BSDs. 
+Experienced engineer having worked as both software/systems engineer and system administrator. Passionate worker and proven leader with excellent time/project/priority management skills; driven to succeed at any task. Capable learner who can not only rapidly close any knowledge gap, but enjoys teaching others and writing more practical documents/guides. Enthusiast about all things open source, especially Python and BSDs. Passionate educator currently volunteering teaching AP Computer Science at a local high school.
 
 %----------------------------------------------------------------------------------------
 %       WORK EXPERIENCE
@@ -97,19 +97,31 @@ Experienced engineer having worked as both software/systems engineer and system 
 % WORK EXPERIENCE 1
 %------------------------------------------------
 
-{\raggedleft\textsc{December 2015 - current}\par}
+{\raggedleft\textsc{March 2018 - present}\par}
 
-{
-\raggedright\large Software Engineer II\\
-\raggedright\small Software Engineer I\\
-\raggedright\small Associate Software Engineer\\
-\textit{Forcepoint, powered by Raytheon}\\[5pt]}
+{\raggedright\large Sr. Site Reliability Engineer\\
+\textit{HomeAway}\\[5pt]}
 
-\normalsize{Designed and implemented a Cloud based CI/CD pipeline for the Cloud 2.0 initiative using Artifactory, Jenkins, Docker, Kubernetes, Terraform and other DevOps cloud tools on AWS as Infrastructure as Code Part of the team that re-architected an on-premise CentOS based secure operating system in an effort to replace the legacy product. Implemented a custom plugin based initialization framework to allow for quick development of new software integrations. Lead development on the integration point between the new architecture and the web filtering/proxy team. Implemented CI/CD pipelines in Jenkins and Docker for the building of custom RPMs, static analysis, unit testing, and documentation generation using Sphinx. Promoted multiple times within same team.}\\
-
+\normalsize{Responsible for HomeAway's internal hybrid cloud platform containing more than 1000 nodes and tens of thousands of containers. Worked to implement the seamless replacement of schedulers from Mesos to Nomad. Implemented automation tooling around the auto-scaling of clusters. Implemented standards, pipelines, and project generators for Python development at HomeAway.}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 2
+%------------------------------------------------
+
+{\raggedleft\textsc{December 2015 - March 2018}\par}
+
+{
+\raggedright\large Software Engineer II\\
+\textit{Forcepoint, powered by Raytheon}\\
+\raggedright\small \textit{Software Engineer I}\\
+\raggedright\small \textit{Associate Software Engineer}\\
+}
+
+\normalsize{Designed and implemented a Cloud based CI/CD pipeline for the Cloud 2.0 initiative on AWS. Integral part of the team that re-architected an on-premise CentOS based secure operating system in an effort to replace the legacy product. Implemented a custom plugin based initialization framework to allow for quick development of new software integrations. Implemented CI/CD pipelines for the build, code quality checks, and documentation generation of the code base. Promoted multiple times within same team.}\\
+
+
+%------------------------------------------------
+% WORK EXPERIENCE 3
 %------------------------------------------------
 
 {\raggedleft\textsc{June 2012 - December 2015}\par}
@@ -117,19 +129,20 @@ Experienced engineer having worked as both software/systems engineer and system 
 {\raggedright\large Undergraduate Instructional Assistant\\
 \textit{Department of Computer Science, Texas State University}\\[5pt]}
 
-\normalsize{Lab Instructor and tutor tasked with tutoring students in a wide range of subjects and instructing course specific labs. Designed an accelerated curriculum for the advanced introductory course. Lead a team tasked with designing new software and utilities for use by faculty, staff, and students. Managed multiple departmental servers. Created automated solutions for departmental problems. Examples would be a multi-OS netboot system, a homework upload solution, automated domain join tool, etc.}\\
+\normalsize{Lab Instructor and tutor tasked with tutoring students in a wide range of subjects and instructing course specific labs. Designed an accelerated curriculum for the advanced introductory course. Lead a team tasked with designing new software and utilities for use by faculty, staff, and students. Managed multiple departmental servers and created automated solutions for departmental tasks.}\\
 
 %----------------------------------------------------------------------------------------
 % PROJECTS
 %----------------------------------------------------------------------------------------
-\section{Speaker/Guest Lecturer}
+\section{Open Source Projects}
 
 \begin{tabular}{rl}
-& Texas Linux Festival 2016\\
-& \quad \textit{pfSense - A Beginner's Guide to a Sensible Firewall} \\
-& Texas State University (every semester 2016 - present)\\
-& \quad \textit{Reality of Being a Software Engineer}\\
+& UnlockedEdu - Open Source Educational Resources\\
+& \quad \href{https://www.unlockededu.org}{https://www.unlockededu.org} \\
 \end{tabular}\\[10pt]
+
+
+
 
 
 \end{minipage} % End the left-hand side of the page
@@ -143,7 +156,7 @@ Experienced engineer having worked as both software/systems engineer and system 
 
 \colorbox{shade}{\textcolor{text1}{
 \begin{tabular}{c|p{7cm}}
-\raisebox{-4pt}{\textifsymbol{18}} & 4600 Seton Center Parkway \#801 Austin, TX \\ % Address
+\raisebox{-4pt}{\textifsymbol{18}} & 11915 Stonehollow Dr. \#1637 Austin, TX \\ % Address
 \raisebox{-3pt}{\Mobilefone} & (512)387-0297 \\ % Phone number
 \raisebox{-1pt}{\Letter} & \href{mailto:mason@masonegger.com}{mason@masonegger.com} \\ % Email address
 \Keyboard & \href{https://www.masonegger.com}{https://www.masonegger.com} \\ % Website
@@ -159,17 +172,17 @@ Experienced engineer having worked as both software/systems engineer and system 
 
 \begin{tabular}{rl}
 Languages
-& \textsc{Python}, \textsc{Java}, \textsc{C++}, \textsc{C}, \textsc{Perl},\\
+& \textsc{Python}, \textsc{Java}, \textsc{C++}, \textsc{C}, \textsc{Golang},\\
 Operating Systems
-& \textsc{Linux(RHEL, CentOS, Kali, Fedora)} \\
-& \textsc{OpenBSD}, \textsc{FreeBSD}, \\
+& \textsc{Linux (All flavors)},  \textsc{FreeBSD}, \textsc{OpenBSD} \\
 Dev Ops
 & \textsc{Jenkins}, \textsc{Docker}, \textsc{Kubernetes}, \textsc{Artifactory}, \\
-& \textsc{Terraform}\\
+& \textsc{Terraform}, \textsc{Consul}, \textsc{Vault}, \textsc{Nomad}\\
+& \textsc{Networking}\\
 Cloud
-& \textsc{AWS}, \textsc{Digital Ocean},
-%Network
-%& \textsc{DNS}, \textsc{DHCP}, \textsc{Routing}, \textsc{VPN}, \textsc{VLANs},\\
+& \textsc{AWS}, \textsc{Digital Ocean},\\
+Misc.
+& \textsc{Computer Science Education}\\
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
@@ -183,14 +196,20 @@ Cloud
 %------------------------------------------------
 % EDUCATION 1
 %------------------------------------------------
+\textit{2021} \textbf{Mastersof Science}\\
+& \textsc{Computer Science}\\
+& \textit{Georgia Institute of Technology}\\
 
+%------------------------------------------------
+% EDUCATION 2
+%------------------------------------------------
 2015 \textbf{Bachelor of Science} \\ 
 & \textsc{Computer Science} \\ 
 & \textit{Texas State University}\\
 
 	 
 %------------------------------------------------
-% EDUCATION 2
+% EDUCATION 3
 %------------------------------------------------
 
 2015 \textbf{Bachelor of Arts} \\ 
@@ -208,24 +227,30 @@ Cloud
 \begin{tabular}{rl}
 2016     & \textbf{Silver Performance Award}\\
 & \textit{Forcepoint}\\ \\
-2015     & \textbf{Excellence in Service}\\
-& \textit{Texas State University}\\ \\
-2014	 & \textbf{Excellence in Teaching}\\
-	 & \textbf{Undergraduate Academic Distinction}\\
-& \textit{Texas State University}\\ \\
 
-2013     & \textbf{Excellence in Service}\\
-& \textit{Texas State University}\\ \\
+2013-2015     & \textbf{Excellence in Service 2013, 2015}\\
+& \textbf{Excellence in Teaching 2014}\\
+& \textbf{Undergraduate Academic Distinction 2014}\\
+& \textit{Texas State University}\\\\
 
-%------------------------------------------------
-
-2011	 & \textbf{UIL State Champion Computer Science Team}\\
-& \textit{Needville High School}
 \end{tabular}\\[10pt]
 
 
+%----------------------------------------------------------------------------------------
+%	Volunteer
+%----------------------------------------------------------------------------------------
 
+\section{Volunteer} 
 
+\begin{tabular}{rl}
+2018-2019     & \textbf{Co-Teacher, AP Computer Science A}\\
+& \textbf{TEALS}\\
+& \textit{IDEA Montopolis, High School}\\ \\
+
+2015-present & \textbf{Guest Lecturer}\\
+& \textit{Texas State University}\\\\
+
+\end{tabular}\\[10pt]
 
 %----------------------------------------------------------------------------------------
 %	Miscellaneous
@@ -236,9 +261,6 @@ Cloud
 \begin{tabular}{rl}
 & YouTube Host \textit{BSD Synergy}\\
 & Recordings: \textit{Trombones at Texas State}, \textit{Carol of the Bones} \\
-& Phi Mu Alpha - Gamma Phi Chapter \textit{Alumni Relations Officer}  \\
-& Team Lead, \textit{Collegiate Cyber Defense Competition}\\
-& Alumni, \textit{Bobcat Marching Band}\\
 \end{tabular}\\[10pt]
 
 %----------------------------------------------------------------------------------------
