changing to Vrbo and minor changes

--- a/resume.tex
+++ b/resume.tex
@@ -24,7 +24,7 @@
 
 \documentclass[10pt]{article} % Font size - 10pt, 11pt or 12pt
 
-\usepackage[hmargin=1.25cm, vmargin=1.5cm]{geometry} % Document margins
+\usepackage[hmargin=1.25cm, vmargin=1.0cm]{geometry} % Document margins
 
 \usepackage{marvosym} % Required for symbols in the colored box
 \usepackage{ifsym} % Required for symbols in the colored box
@@ -85,7 +85,7 @@
 %	OBJECTIVE
 %----------------------------------------------------------------------------------------
 \section{About Me}
-Experienced engineer having worked as both software/systems engineer and system administrator. Passionate worker and proven leader with excellent time/project/priority management skills; driven to succeed at any task. Capable learner who can not only rapidly close any knowledge gap, but enjoys teaching others and writing more practical documents/guides. Enthusiast about all things open source, especially Python and BSDs. Passionate educator currently volunteering teaching AP Computer Science at a local high school.
+Experienced engineer having worked as both a software and systems engineer with a penchant for security, distributed systems, networking, and Python. Passionate worker and proven leader with excellent time/project/priority management skills; driven to succeed at any task. Capable learner who can not only rapidly close any knowledge gap, but enjoys teaching others and writing more practical documents/guides. Enthusiast about all things open source. Passionate educator currently volunteering teaching AP Computer Science at a local high school.
 
 %----------------------------------------------------------------------------------------
 %       WORK EXPERIENCE
@@ -100,9 +100,9 @@ Experienced engineer having worked as both software/systems engineer and system 
 {\raggedleft\textsc{March 2018 - present}\par}
 
 {\raggedright\large Sr. Site Reliability Engineer\\
-\textit{HomeAway}\\[5pt]}
+\textit{Vrbo}\\[5pt]}
 
-\normalsize{Responsible for HomeAway's internal hybrid cloud platform containing more than 1000 nodes and tens of thousands of containers. Worked to implement the seamless replacement of schedulers from Mesos to Nomad. Implemented automation tooling around the auto-scaling of clusters. Implemented standards, pipelines, and project generators for Python development at HomeAway.}\\
+\normalsize{Responsible for HomeAway's internal hybrid cloud Platform as a Service, containing more than a thousand nodes and tens of thousands of containers. Worked to implement the seamless replacement of schedulers from Mesos to Nomad. Implemented automation tooling around the auto-scaling of clusters. Worked to implement a Data Science and Machine Learning platform through implementing standards, pipelines, and project generators for Python developers and Data Scientists. Created a unified process and led the effort for unifying all of the Cloud Platform documentation.}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 2
@@ -144,7 +144,6 @@ Experienced engineer having worked as both software/systems engineer and system 
 
 
 
-
 \end{minipage} % End the left-hand side of the page
 \hfill
 \begin{minipage}[t]{0.44\textwidth} % Start the right-hand side of the page
@@ -162,7 +161,7 @@ Experienced engineer having worked as both software/systems engineer and system 
 \Keyboard & \href{https://www.masonegger.com}{https://www.masonegger.com} \\ % Website
 \end{tabular}
 }
-}\\[10pt]
+}\\
 
 %----------------------------------------------------------------------------------------
 %	COMPUTER SKILLS
@@ -175,10 +174,10 @@ Languages
 & \textsc{Python}, \textsc{Java}, \textsc{C++}, \textsc{C}, \textsc{Golang},\\
 Operating Systems
 & \textsc{Linux (All flavors)},  \textsc{FreeBSD}, \textsc{OpenBSD} \\
-Dev Ops
+Systems
 & \textsc{Jenkins}, \textsc{Docker}, \textsc{Kubernetes}, \textsc{Artifactory}, \\
 & \textsc{Terraform}, \textsc{Consul}, \textsc{Vault}, \textsc{Nomad}\\
-& \textsc{Networking}\\
+& \textsc{Packer}, \textsc{Networking}\\
 Cloud
 & \textsc{AWS}, \textsc{Digital Ocean},\\
 Misc.
@@ -196,7 +195,7 @@ Misc.
 %------------------------------------------------
 % EDUCATION 1
 %------------------------------------------------
-\textit{2021} \textbf{Mastersof Science}\\
+\textit{2021} \textbf{Master of Science}\\
 & \textsc{Computer Science}\\
 & \textit{Georgia Institute of Technology}\\
 
@@ -218,6 +217,8 @@ Misc.
 
 \end{tabular}
 
+
+
 %----------------------------------------------------------------------------------------
 %	AWARDS
 %----------------------------------------------------------------------------------------
@@ -236,6 +237,8 @@ Misc.
 \end{tabular}\\[10pt]
 
 
+
+
 %----------------------------------------------------------------------------------------
 %	Volunteer
 %----------------------------------------------------------------------------------------
@@ -248,9 +251,10 @@ Misc.
 & \textit{IDEA Montopolis, High School}\\ \\
 
 2015-present & \textbf{Guest Lecturer}\\
+& \textbf{Industrial Advisory Board Member}\\
 & \textit{Texas State University}\\\\
 
-\end{tabular}\\[10pt]
+\end{tabular}\\
 
 %----------------------------------------------------------------------------------------
 %	Miscellaneous
@@ -259,7 +263,7 @@ Misc.
 \section{Miscellaneous} 
 
 \begin{tabular}{rl}
-& YouTube Host \textit{BSD Synergy}\\
+& YouTube Host \href{https://www.youtube.com/masonegger}{Mason Egger}\\
 & Recordings: \textit{Trombones at Texas State}, \textit{Carol of the Bones} \\
 \end{tabular}\\[10pt]
 
